<resources>
    <string name="app_name">Login App</string>
    <string name="user_login">User Login</string>
    <string name="username">Username</string>
    <string name="forgot_your_password">Forgot your password? </string>
    <string name="reestablish_password">Reestablish</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up_text">Don\'t have an Account? Sign Up</string>
</resources>