<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:layout_marginHorizontal="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/user_login"
            android:textColor="@color/black"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_user"
                android:drawableTint="@color/black"
                android:drawablePadding="@dimen/login_drawable_padding"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="@dimen/padding_login_edit_text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleContentDescription="password"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/loginContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@color/black"
                android:drawablePadding="@dimen/login_drawable_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_login_edit_text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:background="@android:color/holo_blue_bright"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainer"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/h2_text_size"
            android:text="@string/forgot_your_password"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>